Split bot into its own file

--- a/sc2Bot/sc2Bot.vcxproj.filters
+++ b/sc2Bot/sc2Bot.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="WorkerManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Bot.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="WorkerManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Bot.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
